--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <h2 data-toc-skip>Dev status</h2>
 <ul class="list-unstyled">
 <li><a href="https://github.com/kkholst/targeted/actions" class="external-link"><img src="https://github.com/kkholst/targeted/workflows/R-CMD-check/badge.svg?branch=master" alt="R-CMD-check"></a></li>
-<li><a href="https://app.codecov.io/github/kkholst/targeted?branch=master" class="external-link"><img src="https://app.codecov.io/github/kkholst/targeted/coverage.svg?branch=master" alt="coverage"></a></li>
+<li><a href="https://app.codecov.io/github/kkholst/targeted?branch=main" class="external-link"><img src="https://app.codecov.io/github/kkholst/targeted/coverage.svg?branch=main" alt="coverage"></a></li>
 <li><a href="https://opensource.org/license/apache-2-0" class="external-link"><img src="https://img.shields.io/badge/License-Apache%202.0-blue.svg" alt="license"></a></li>
 <li><a href="https://cranlogs.r-pkg.org/downloads/total/last-month/targeted" class="external-link"><img src="https://www.r-pkg.org/badges/version-last-release/targeted" alt="cran"></a></li>
 </ul>
